# bilinear-sandbox

./: CMakeLists.txt  NANOBIND_GUIDE.md  README.md  pyproject.toml
.github/workflows/: build-wheels.yml
cpp/: bindings.cpp
cpp/bindings/: _native.cpp
cpp/include/bilinear/: demosaicing_fast.hpp
cpp/include/fastimg/: demosaicing.hpp
cpp/kernels/: demosaicing.cpp  demosaicing.hpp  demosaicing_fast.cpp  demosaicing_fast.hpp
cpp/src/: demosaicing.cpp  demosaicing_fast.cpp
scripts/: benchmark.py  compare_with_opencv.py  image_utils.py
src/bilinear/: __init__.py  _backend.py  _native.pyi  _reference.py  api.py
src/bilinear/_python/: demosaicing.py
src/fastimg/: __init__.py  _backend.py  demosaicing.py
src/fastimg/_python/: __init__.py  demosaicing.py
tests/: test_demosaicing.py  test_import_modes.py  test_reference_vs_native.py
