[project]
name = "bilinear"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ryota MAEDA", email = "maeda.ryota.elerac@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.5",
]

[build-system]
requires = [
    "scikit-build-core>=0.12",
    "nanobind>=2.12.0",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/bilinear"]
sdist.include = [
    "CMakeLists.txt",
    "cpp/**",
]

[tool.scikit-build.messages]
after-success = "bilinear wheel built successfully."

[[tool.scikit-build.overrides]]
if.failed = true
wheel.cmake = false
wheel.py-api = "py3"
messages.after-success = """
Native extension build failed, so bilinear was built as a pure Python wheel.
The package will work, but demosaicing operations will be slower.
"""

[dependency-groups]
dev = [
    "opencv-python>=4.13.0.92",
    "pytest>=9.0.3",
]
